# sqlmap-agent

./: .env  Dockerfile  README.md  main.py  pyproject.toml
scripts/: run_local.sh
src/sqlmap_agent/: agent.py  config.py  run.py  sqlmap_tool.py
